--- a/assets/style.css
+++ b/assets/style.css
@@ -83,9 +83,20 @@ footer {
     border-top: 2px black solid;
     color: white;
     background-color: purple;
+    padding-bottom: 15px;
 }
 
 li {
     display: inline; 
     margin: 0 5px 0;
+}
+
+@media only screen and (max-width: 567px) {
+    #bio {
+        float: left;
+        display: inline-block;
+    }
+    /* .row {
+        display: inline-block;
+    } */
 }
