--- a/assets/style.css
+++ b/assets/style.css
@@ -96,7 +96,19 @@ li {
         float: left;
         display: inline-block;
     }
-    /* .row {
-        display: inline-block;
-    } */
+    
+    #home {
+        width: 100%;
+        max-height: inherit;
+        margin: 0;
+        padding: 0;
+        background-image: url("https://mariop.site/wp-content/uploads/2018/09/living-room-lights-argos-ideas-singapore-furniture-near-me-painting-on-a-wall-world-magnificent-free-artwork-mockup.jpg");
+        background-size:100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        font-family: 'Acme', sans-serif;
+        position: relative;
+        padding-bottom: 200px;
+    }
+
 }
