--- a/assets/style.css
+++ b/assets/style.css
@@ -104,6 +104,7 @@ li {
         padding: 0;
         background-image: url("https://colorwallpaper.net/wp-content/uploads/2018/06/bear-stand-field.jpg");
         background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
         /* background-size: center; */
         background-repeat: no-repeat;
         background-attachment: fixed;
