--- a/assets/style.css
+++ b/assets/style.css
@@ -99,10 +99,10 @@ li {
     
     #home {
         width: 100%;
-        max-height: inherit;
+        /* max-height: inherit; */
         margin: 0;
         padding: 0;
-        background-image: url("https://colorwallpaper.net/wp-content/uploads/2018/06/bear-stand-field.jpg");
+        background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         background-size: 100% 100%;
         -webkit-background-size: 100% 100%;
         /* background-size: center; */
@@ -124,7 +124,7 @@ li {
     P {
         color: white;
         text-align: center;
-        text-shadow: 2px 2px 4px black; 
+        text-shadow: 2px 2px 4px #ff6600; 
     }
 
     footer {
