--- a/assets/style.css
+++ b/assets/style.css
@@ -98,13 +98,13 @@ li {
     }
     
     #home {
-        width: 100%;
+        width: auto;
         /* max-height: inherit; */
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         background-size: 100% 100%;
-        -webkit-background-size: 100% 100%;
+        /* -webkit-background-size: 100% 100%; */
         /* background-size: center; */
         background-repeat: no-repeat;
         background-attachment: fixed;
