--- a/assets/style.css
+++ b/assets/style.css
@@ -110,7 +110,7 @@ li {
         -moz-background-size: 100% 100%;
         -o-background-size: 100% 100%;
         background-repeat: no-repeat;
-        background-attachment: fixed;
+        /* background-attachment: fixed; */
         font-family: 'Acme', sans-serif;
         position: relative;
         padding-bottom: 200px;
