--- a/assets/style.css
+++ b/assets/style.css
@@ -103,14 +103,13 @@ li {
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        background-size: 100% 100%;
-        /* -webkit-background-size: 100% 100%; */
-        /* background-size: center; */
+        
         -webkit-background-size: 100% 100%;
         -moz-background-size: 100% 100%;
         -o-background-size: 100% 100%;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
-        /* background-attachment: fixed; */
+        background-attachment: fixed;
         font-family: 'Acme', sans-serif;
         position: relative;
         padding-bottom: 200px;
