--- a/assets/style.css
+++ b/assets/style.css
@@ -99,17 +99,18 @@ li {
     
     #home {
         width: 100%;
-        /* max-height: inherit; */
+        max-height: auto;
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         
-        -webkit-background-size: 100% 100%;
+        /* -webkit-background-size: 100% 100%;
         -moz-background-size: 100% 100%;
-        -o-background-size: 100% 100%;
-        background-size: 100% 100%;
+        -o-background-size: 100% 100%; */
+        
         background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-attachment: fixed !important;
+        background-size: 100% 100%;
         font-family: 'Acme', sans-serif;
         position: relative;
         padding-bottom: 200px;
