--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,7 @@ li {
     margin: 0 5px 0;
 }
 
-@media only screen and (max-width: 376px) {
+@media only screen and (max-width: 376px) and (orientation: portrait) {
     #bio {
         float: left;
         display: inline-block;
