--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ li {
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         background-position: center;
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: contain;
         background-attachment: fixed !important;
         position: relative;
         font-family: 'Acme', sans-serif;
