--- a/assets/style.css
+++ b/assets/style.css
@@ -99,7 +99,7 @@ li {
     
     #home {
         width: 100%;
-        /* max-height: auto; */
+        max-height: fit-content;
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
