--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ li {
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         background-size: 100% 100%;
         background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-attachment: scroll;
         /* position: relative; */
         font-family: 'Acme', sans-serif;
         padding-bottom: 200px;
