--- a/assets/style.css
+++ b/assets/style.css
@@ -103,10 +103,10 @@ li {
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        background-size: 100% 100%;
+        /* background-size: 100% 100%; */
         background-repeat: no-repeat;
         /* background-attachment: fixed; */
-        background-position: center center;
+        /* background-position: center center; */
         font-family: 'Acme', sans-serif;
         padding-bottom: 200px;
     }
