--- a/assets/style.css
+++ b/assets/style.css
@@ -103,10 +103,12 @@ li {
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        /* background-size: 100% 100%; */
+        background-position: center middle;
+        background-size: cover;
+        background-attachment: fixed;
         background-repeat: no-repeat;
-        /* background-attachment: fixed; */
-        /* background-position: center center; */
+        
+        
         font-family: 'Acme', sans-serif;
         padding-bottom: 200px;
     }
