--- a/assets/style.css
+++ b/assets/style.css
@@ -98,12 +98,12 @@ li {
     }
     
     #home {
-        width: 100%;
+        /* width: 100%; */
         /* max-height: inherit; */
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        background-position: center middle;
+        background-position: center;
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
