--- a/assets/style.css
+++ b/assets/style.css
@@ -104,7 +104,7 @@ li {
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
         background-position: center;
-        background-size: cover;
+        background-size: 100% 100%;
         background-attachment: fixed;
         background-repeat: no-repeat;
         
