--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,7 @@ li {
     margin: 0 5px 0;
 }
 
-@media only screen and (max-width: 376px) {
+@media only screen and (max-width: 376px) and (orientation: portrait) {
     #bio {
         float: left;
         display: inline-block;
@@ -103,7 +103,7 @@ li {
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        background-position: center;
+        background-position: center top;
         background-size: 100% 100%;
         background-attachment: fixed;
         background-repeat: no-repeat;
