--- a/assets/style.css
+++ b/assets/style.css
@@ -92,6 +92,7 @@ li {
 }
 
 @media screen and (max-width: 376px), screen and (orientation: portrait) {
+
     #bio {
         float: left;
         display: inline-block;
@@ -102,13 +103,12 @@ li {
         /* max-height: inherit; */
         margin: 0;
         padding: 0;
-        background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
+        /* background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg"); */
+        background: linear-gradient(-90deg, #e6dada #274046);
         background-position: top;
         background-size: 100% 100%;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        
-        
         font-family: 'Acme', sans-serif;
         padding-bottom: 200px;
     }
