--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,7 @@ li {
     margin: 0 5px 0;
 }
 
-@media only screen and (orientation: portrait) {
+@media all and (max-width: 376px) {
 
     #bio {
         float: left;
