--- a/assets/style.css
+++ b/assets/style.css
@@ -101,10 +101,10 @@ li {
     #home {
         /* width: 100%; */
         /* max-height: inherit; */
+        display: inline-block;
         margin: 0;
         padding: 0;
         background-image: url("https://www.setaswall.com/wp-content/uploads/2018/04/1125x2436-Wallpaper-389.jpg");
-        /* background:  #e6dada #274046; */
         background-position: top;
         background-size: 100% 100%;
         background-attachment: fixed;
